# surrealdb-docs-mcp

./: .gitignore  Cargo.toml  LEGAL.md  README.md
src/: main.rs
